fixed jump when unmarking bookmarks

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -188,6 +188,9 @@ progress
 .title
   font-style: italic
 
+.hidden
+  visibility: hidden
+
 .hint
   @include fade
   position: absolute
